syntax = "proto3";

package models.v1;

import "google/protobuf/timestamp.proto";

message Organization {
    int64 id = 1;
    string brand_name = 2;
    string full_name = 3;
    string short_name = 4;
    string inn = 5;
    string okpo = 6;
    string ogrn = 7;
    string kpp = 8;
    string tax_code = 9;
    string address = 10;
    bool verified = 11;
    bool is_contractor = 12;
    bool is_banned = 13;
    optional string avatar_url = 14;
    repeated Contact emails = 15;
    repeated Contact phones = 16;
    repeated Contact messengers = 17;
    google.protobuf.Timestamp created_at = 18;
    google.protobuf.Timestamp updated_at = 19;
}

message Contact {
    string contact = 1;
    string info = 2;
}
